minor layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ ul.breadcrumb-nav {
   margin-bottom: 10px;
   width: 70px;
   height: 90px;
+  font-size: 13px;
 }
 .project-nav img {
   display: block;
